--- a/gl_1_canvasGlut/canvas.cbp
+++ b/gl_1_canvasGlut/canvas.cbp
@@ -62,6 +62,8 @@
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/slider.cpp" />
 		<Unit filename="src/slider.h" />
+		<Unit filename="src/slider_manager.cpp" />
+		<Unit filename="src/slider_manager.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
