started gun implementation

--- a/Trab2RaulSteinmetz/gl_1_canvasGlut/canvas.cbp
+++ b/Trab2RaulSteinmetz/gl_1_canvasGlut/canvas.cbp
@@ -45,8 +45,11 @@
 		</Linker>
 		<Unit filename="include/GL/glut.h" />
 		<Unit filename="src/Vector2.h" />
+		<Unit filename="src/frames.h" />
 		<Unit filename="src/gl_canvas2d.cpp" />
 		<Unit filename="src/gl_canvas2d.h" />
+		<Unit filename="src/gun.cpp" />
+		<Unit filename="src/gun.h" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/starship.cpp" />
 		<Unit filename="src/starship.h" />
