--- a/estudo_para_p1/gl_1_canvasGlut/canvas.cbp
+++ b/estudo_para_p1/gl_1_canvasGlut/canvas.cbp
@@ -44,6 +44,7 @@
 			<Add library="../lib/freeglut.lib" />
 		</Linker>
 		<Unit filename="include/GL/glut.h" />
+		<Unit filename="src/Vector2.h" />
 		<Unit filename="src/gl_canvas2d.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Extensions>
