enemies spawn, move, shoot with basic ai

--- a/Trab2RaulSteinmetz/gl_1_canvasGlut/.vscode/settings.json
+++ b/Trab2RaulSteinmetz/gl_1_canvasGlut/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "environment.h": "c",
         "gl_canvas2d.h": "c",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "*.tcc": "cpp"
     }
 }
