--- a/Trab3RaulSteinmetz/Trab3RaulSteinmetz/canvas.cbp
+++ b/Trab3RaulSteinmetz/Trab3RaulSteinmetz/canvas.cbp
@@ -52,6 +52,8 @@
 		<Unit filename="src/frames.h" />
 		<Unit filename="src/gl_canvas2d.cpp" />
 		<Unit filename="src/gl_canvas2d.h" />
+		<Unit filename="src/interface.cpp" />
+		<Unit filename="src/interface.h" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/models3d.cpp" />
 		<Unit filename="src/models3d.h" />
